WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13194
REGRESSION: Selection rects are wrong for images in search results from images.google.com
https://bugs.webkit.org/show_bug.cgi?id=13194
Summary
REGRESSION: Selection rects are wrong for images in search results from image...
Darin Adler
Reported
2007-03-26 13:37:22 PDT
The selection rects for images returned by images.google.com are offset from the images * STEPS TO REPRODUCE 1. search for orange at images.google.com 2. Select a block of images * RESULTS The selection rects are all aligned to the top of the row, rather than around the image itself. * REGRESSION This works in release WebKit <
rdar://problem/5087738
>
Attachments
Patch, including pixel test and change log
(34.12 KB, patch)
2007-03-26 15:14 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-03-26 15:14:00 PDT
Created
attachment 13820
[details]
Patch, including pixel test and change log
Darin Adler
Comment 2
2007-03-26 16:07:08 PDT
Comment on
attachment 13820
[details]
Patch, including pixel test and change log r=me
Darin Adler
Comment 3
2007-03-26 17:04:59 PDT
Committed revision 20499.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug