LayoutTests:

Reviewed and landed by Darin.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=13194
          REGRESSION: Selection rects are wrong for images in search results from images.google.com

        * fast/replaced/selection-rect-in-table-cell-expected.checksum: Added.
        * fast/replaced/selection-rect-in-table-cell-expected.png: Added.
        * fast/replaced/selection-rect-in-table-cell-expected.txt: Added.
        * fast/replaced/selection-rect-in-table-cell.html: Added.

WebCore:

        Reviewed and landed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13194
          <rdar://problem/5087738>
          REGRESSION: Selection rects are wrong for images in search results from images.google.com

        Test: fast/replaced/selection-rect-in-table-cell.html

        * rendering/RenderReplaced.cpp:
        (WebCore::RenderReplaced::selectionRect):



git-svn-id: svn://svn.chromium.org/blink/trunk@20499 bbb929c8-8fbe-4397-9dbb-9b2b20218538